--- a/wsgi.ini
+++ b/wsgi.ini
@@ -8,7 +8,10 @@ socket = automation.sock
 chmod-socket = 660
 vacuum = true
 
-die-on-term = true
+http-timeout = 1200
 
-logto = /home/robot/logs.log
+logto = /home/automation/Documents/wsgi.log
 log-maxsize = 52428800
+logfile_backups = 10
+
+die-on-term = true
